objects/cm_Industry_Code__c.object
<CustomObject>
    <description>Used to track industry codes.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cm_Industry_Code_Description__c</fullName>
        <label>Industry Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Industry_Code__c</fullName>
        <description>Contains Industry Code value.</description>
        <label>Industry Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Industry Code</label>
    <nameField>
        <label>Industry Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>